--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   <link rel="stylesheet" href="./src/output.css">
 </head>
 <body>
-    
-    <p>hello</p>
+  <div class="max-w-400 w-[99%] pt-[20px] items-center flex justify-around">
+        <img src="./image 3.png" alt="">
+        <div class="hidden lg:flex gap-10">
+            <h1>Главная</h1>
+            <h1>О нас</h1>
+            <h1>Калькулятор</h1>
+            <h1>Кейсы</h1>
+            <h1>Контакты</h1>
+        </div>
+        <img class="block lg:hidden" src="/src/icn menu .icn-xs.png" alt="">
+        <button class=" hidden w-[215px] h-[56px] bg-[#061B3A] text-[white] rounded-2xl  lg:flex items-center justify-center"><img src="./Phone.png" alt="">Заказать звонок</button>
+    </div>
+
 </body>
 </html>
