--- a/index.html
+++ b/index.html
@@ -20,5 +20,41 @@
         <button class=" hidden w-[215px] h-[56px] bg-[#061B3A] text-[white] rounded-2xl  lg:flex items-center justify-center"><img src="./Phone.png" alt="">Заказать звонок</button>
     </div>
 
+
+     <div class="block max-w-400 w-[99%] bg-[#B3D2FF] lg:pt-[100px] lg:flex">
+            <div class="text-[#1E1E1E] lg:ml-[120px]">
+                <h1 class="w-[100%] lg:w-[150%] lg:text-[64px] text-[30px] font-bold ">Управление потенциалом личной команды</h1>
+                <p class="lg:w-[85%] text-[24px] mt-[30px] ml-[20px] lg:ml-[0]">Рыба текст, рыба текст нужен для вида текста, текста пока нет. Текст делает копирайтер.</p>
+                <div class="flex gap-2  text-[18px] mt-[60px]">
+                    <img class="w-[30px] h-[30px] mt-[5px] ml-[50px] lg:ml-[0]" src="./Frame 16.png" alt="">
+                    <p class="w-[80%]">Тысячи проверенных топ-менеджеров. Ваш идеальный РОП уже в нашей эксклюзивной базе.</p>
+                </div>
+                <div class="flex gap-2 mt-[20px] text-[18px]">
+                    <img src="./Frame 17.png" alt="">
+                    <p>Отработанная годами технология обеспечивает 98% успеха</p>
+                </div>
+                <div class="flex gap-2 mt-[20px] text-[18px]">
+                    <img src="./Frame 19.png" alt="">
+                    <p>20+ лет опыта в отборе. Мы отсеиваем, вы выбираете лучших</p>
+                </div>
+                <button class="w-[431px] h-[53px] flex gap-2 items-center justify-center bg-[white] rounded-2xl mt-[100px] mb-[150px] ml-[50px] lg:ml-[0] ">Записаться на бесплатную консультацию<img class="items-center" src="./Arrow 2.png" alt=""></button>
+</div>
+<div class="lg:ml-[100px]">
+    <img class="relative lg:ml-[100px] z-0" src="./front-view-man-holding-documents 1.png" alt="">
+    <div class="w-[540px] h-[145px] p-5   bg-[white] flex justify-between rounded-[10px] relative lg:mr-[100px] mt-[-400px]">
+<div>
+<h1 class="text-[18px] font-bold">Загрузите требования к работнику</h1>
+<p class="w-[450px] text-[#A5A5A5] mt-[10px]">Прикрепите или перетащите сюда файл требований
+к будущему работнику вашей компании, чем он должен
+обладать</p>
+
+</div>
+<img class="w-[60px] h-[60px]  mt-[15px] mr-[20px]" src="./Frame 12.png" alt="">
+
+
+</div>
+<button class="relative mt-[150px] lg:ml-[300px] ml-[150px] w-[261px] h-[61px] bg-[#071C3B] text-white rounded-4xl z-1">Андрей Веселов</button>
+</div>
+</div>
 </body>
 </html>
