--- a/index.html
+++ b/index.html
@@ -56,5 +56,230 @@
 <button class="relative mt-[150px] lg:ml-[300px] ml-[150px] w-[261px] h-[61px] bg-[#071C3B] text-white rounded-4xl z-1">Андрей Веселов</button>
 </div>
 </div>
+
+
+        
+
+         <div class=" max-w-400 w-[99%]">
+    <h1 class="text-[40px] mt-[100px] lg:ml-[120px] font-bold ">Процесс найма сотрудника</h1>
+ <div class="block lg:flex gap-5 justify-center mt-[30px]">
+    <div>
+        <div class="w-[272px] h-[254px] p-5 rounded-2xl shadow-xl/20 inset-shadow-xs ">
+            <h1 class="font-bold text-[24px]">1 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+
+         <div class="w-[272px] h-[254px] p-5 rounded-2xl shadow-xl/20 inset-shadow-xs mt-[20px]">
+            <h1 class="font-bold text-[24px]">6 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+    </div>
+    <div>
+        <div class="w-[272px] h-[254px] p-5 rounded-2xl shadow-xl/20 inset-shadow-xs ">
+            <h1 class="font-bold text-[24px]">2 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+
+         <div class="w-[272px] h-[254px] p-5 rounded-2xl shadow-xl/20 inset-shadow-xs mt-[20px] ">
+            <h1 class="font-bold text-[24px]">7 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+    </div>
+    <div>
+        <div class="w-[272px] h-[254px] p-5 rounded-2xl shadow-xl/20 inset-shadow-xs ">
+            <h1 class="font-bold text-[24px]">3 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+
+         <div class="w-[272px] h-[254px] bg-[#061B3A] text-white p-5 rounded-2xl shadow-xl/20 inset-shadow-xs mt-[20px] ">
+            <h1 class="font-bold text-[24px]">8 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+    </div>
+     <div>
+        <div class="w-[272px] h-[254px] p-5 rounded-2xl shadow-xl/20 inset-shadow-xs ">
+            <h1 class="font-bold text-[24px]">4 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+
+         <div class="w-[272px] h-[254px] p-5 rounded-2xl shadow-xl/20 inset-shadow-xs mt-[20px] ">
+            <h1 class="font-bold text-[24px]">9 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+    </div>
+     <div>
+        <div class="w-[272px] h-[254px] p-5 rounded-2xl shadow-xl/20 inset-shadow-xs ">
+            <h1 class="font-bold text-[24px]">5 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+
+         <div class="w-[272px] h-[254px] p-5 rounded-2xl shadow-xl/20 inset-shadow-xs mt-[20px] ">
+            <h1 class="font-bold text-[24px]">10 ДЕНЬ</h1>
+            <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Глубокий анализ</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Подписание договора</p>
+            </div>
+             <div class="flex gap-2 items-center mt-[20px] ">
+                <img class="w-[21px] h-[16px] " src="./Group 46.png" alt="">
+                <p >Контрольный созвон</p>
+            </div>
+
+
+        </div>
+    </div>
+ </div>
+</div>
+ <div class=" max-w-400 w-[99%]">
+    <h1 class="text-[40px] mt-[100px] lg:ml-[120px] font-bold ">Сравните сами</h1>
+<div class="block mt-[30px] lg:flex gap-5 justify-center">
+    <div class="w-[500px] h-[406px] border-[3px] text-[#00000066] border-solid border-[#00000014] rounded-2xl pt-[50px] pl-[50px]">
+<h1 class="text-[24px]">САМОСТОЯТЕЛЬНЫЙ ПОДБОР</h1>
+<p class="mt-[50px]">- Job сайты - от <span class="font-bold text-black">29 000 ₽</span></p>
+<p class="mt-[20px]">- Стоимость вашего часа (в среднем) - <span class="font-bold text-black">600 ₽</span></p>
+    <p class="mt-[20px] w-[324px]">- Оклад кандидата на испытательный срок
+   (2-3 мес.) - <span class="font-bold text-black">100 000 ₽</span></p>
+<p class="mt-[20px] w-[344px]">- Упущенная прибыль работодателя за 2 мес:
+>  <span class="font-bold text-black">100 000 ₽</span></p>
+</div>
+<div class="w-[500px] h-[336px]  bg-[#061B3A] text-white rounded-2xl pt-[50px] pl-[50px]">
+<h1 class="text-[24px]">Подбор с нами</h1>
+    <div class=" flex gap-1 items-center mt-[20px]">
+    <img src="/src/Group 45 (1).png" alt="">
+    <h1 class="w-[355px]">От <span class="font-bold">40 000 ₽</span> за подбор менеджера под ключ: и всего 2 часа времени интервью с финалистами</h1>
+</div>
+
+<div class=" flex gap-1 items-center mt-[20px]">
+    <img src="/src/Group 45 (1).png" alt="">
+    <h1 class="w-[355px]">Выгода в финансах >  <span class="font-bold">3 раза</span></h1>
+</div>
+
+<div class=" flex gap-1 items-center mt-[20px]">
+    <img src="/src/Group 45 (1).png" alt="">
+    <h1 class="w-[355px]"><span class="font-bold">Минимум рисков</span>  подбора “не того” <span class="font-bold">и ущерба </span>от ошибок менеджера</h1>
+</div>
+</div>
+</div>  
+
 </body>
 </html>
