--- a/index.html
+++ b/index.html
@@ -281,5 +281,36 @@
 </div>
 </div>  
 
+<div class="block mt-[30px] lg:flex gap-5 justify-center">
+    <div class="w-[500px] h-[406px] border-[3px] text-[#00000066] border-solid border-[#00000014] rounded-2xl pt-[50px] pl-[50px]">
+<h1 class="text-[24px]">САМОСТОЯТЕЛЬНЫЙ ПОДБОР</h1>
+<p class="mt-[50px]">- Job сайты - от <span class="font-bold text-black">29 000 ₽</span></p>
+<p class="mt-[20px]">- Стоимость вашего часа (в среднем) - <span class="font-bold text-black">600 ₽</span></p>
+    <p class="mt-[20px] w-[324px]">- Оклад кандидата на испытательный срок
+   (2-3 мес.) - <span class="font-bold text-black">100 000 ₽</span></p>
+<p class="mt-[20px] w-[344px]">- Упущенная прибыль работодателя за 2 мес:
+>  <span class="font-bold text-black">100 000 ₽</span></p>
+</div>
+<div class="w-[500px] h-[336px]  bg-[#061B3A] text-white rounded-2xl pt-[50px] pl-[50px]">
+<h1 class="text-[24px]">Подбор с нами</h1>
+    <div class=" flex gap-1 items-center mt-[20px]">
+    <img src="/src/Group 45 (1).png" alt="">
+    <h1 class="w-[355px]">От <span class="font-bold">40 000 ₽</span> за подбор менеджера под ключ: и всего 2 часа времени интервью с финалистами</h1>
+</div>
+
+<div class=" flex gap-1 items-center mt-[20px]">
+    <img src="/src/Group 45 (1).png" alt="">
+    <h1 class="w-[355px]">Выгода в финансах >  <span class="font-bold">3 раза</span></h1>
+</div>
+
+<div class=" flex gap-1 items-center mt-[20px]">
+    <img src="/src/Group 45 (1).png" alt="">
+    <h1 class="w-[355px]"><span class="font-bold">Минимум рисков</span>  подбора “не того” <span class="font-bold">и ущерба </span>от ошибок менеджера</h1>
+</div>
+</div>
+</div>  
+
+
+
 </body>
 </html>
